# koolbox

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
koolbox/: __init__.py
koolbox/models/: sequential_feature_selector.py  validators.py  weighted_ensemble_classifier.py  weighted_ensemble_regressor.py
koolbox/trainer/: base.py  trainer.py  validator.py
